@@ -61,8 +61,19 @@ def callback_query_handler(call: telebot.types.CallbackQuery):
             process_game(message=call.message, user_id=int(call.data.split(":")[2]))
         case "spells_menu":  # TODO v0.0.8b
             pass
-        case "inventory_menu":  # TODO v0.0.7b
-            pass
+        case "inventory_menu":
+            message_text = ""
+            inventory = data_api.get_inventory(user_id=int(call.data.split(":")[2]))
+            markup = types.InlineKeyboardMarkup()
+            for i in range(5):
+                markup.add(
+                    types.InlineKeyboardButton(text=f"Slot {i+1} {"(active)" if inventory[i][1] == "active" else ""}", callback_data=f"game:inventory.inventroy:slot_choose_{i}.user:{int(call.data.split(":")[2])}"),
+                )
+            markup.add(types.InlineKeyboardButton(text="Back to maze.", callback_data=f"game:continue.user:{int(call.data.split(":")[2])}"))
+            for i in range(len(inventory)):
+                message_text += f"<i>Slot {i+1}</i>: <b>TODO: data_api.get_item(item_id={inventory[i][0]})</b>\n"  # TODO v0.0.9b
+            bot.delete_message(call.message.chat.id, call.message.id)
+            bot.send_message(call.message.chat.id, message_text, reply_markup=markup,  parse_mode="html")
         case "settings_menu":
             markup = types.InlineKeyboardMarkup()
             markup.row(
