@@ -9,16 +9,14 @@ import os
 if __name__ == "__main__":
     load_dotenv()
     print(f"[{datetime.now().strftime("%H:%M:%S")}] Attempting to start data API...")
-    if data_api.start_api(secretkey=os.getenv("secretkey")) == "Started.":
-        print(f"[{datetime.now().strftime("%H:%M:%S")}] Data API started.")
-        print(f"[{datetime.now().strftime("%H:%M:%S")}] Starting the bot...")
-        try:
-            bot.infinity_polling(timeout=10, long_polling_timeout=5)
-        except (exceptions.ConnectionError, exceptions.ReadTimeout) as e:
-            print(f"[{datetime.now().strftime("%H:%M:%S")}] Caught exception {e}. Restarting the bot...")
-            sys.stdout.flush()
-            os.execv(sys.argv[0], sys.argv)
-        else:
-            bot.infinity_polling(timeout=10, long_polling_timeout=5)
+    data_api.start_api()
+    print(f"[{datetime.now().strftime("%H:%M:%S")}] Data API started.")
+    print(f"[{datetime.now().strftime("%H:%M:%S")}] Starting the bot...")
+    try:
+        bot.infinity_polling(timeout=10, long_polling_timeout=5)
+    except (exceptions.ConnectionError, exceptions.ReadTimeout) as e:
+        print(f"[{datetime.now().strftime("%H:%M:%S")}] Caught exception {e}. Restarting the bot...")
+        sys.stdout.flush()
+        os.execv(sys.argv[0], sys.argv)
     else:
-        print(f"[{datetime.now().strftime("%H:%M:%S")}] Access to data API denied: wrong secret key.")
+        bot.infinity_polling(timeout=10, long_polling_timeout=5)
